fix lại cấu trúc